--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" th:src="@{/js/axios.js}"></script>
     <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+    <script type="text/javascript" th:src="@{/js/echarts.js}"></script>
     <script>Vue.config.productionTip= false </script>
     <script>
         feather.replace()
