完成支付设置功能

--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -26,6 +26,7 @@
         feather.replace()
     </script>
     <script type="text/javascript" th:src="@{/bootstrap/js/Chart.min.js}"></script>
+    <script src="https://kit.fontawesome.com/77c5aa3d79.js" crossorigin="anonymous"></script>
 </nav>
 
 <!-- 头部导航栏 -->
@@ -123,30 +124,6 @@
             挂号费
         </p>
     </div>
-    <div class="tip" onclick="window.open('http://localhost:8080/manage/toInspection','_self')">
-        <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#ffda6e;" fill="currentColor" class="bi bi-file-text-fill svg-text" viewBox="0 0 16 16">
-                <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM5 4h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm0 2h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1z"/>
-            </svg>&nbsp;
-            检查检验
-        </p>
-    </div>
-    <div class="tip" onclick="window.open('http://localhost:8080/manage/toTreat','_self')">
-        <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#ff6587;" fill="currentColor" class="bi bi-heart-fill svg-text" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-            </svg>&nbsp;
-            治疗理疗
-        </p>
-    </div>
-    <div class="tip" onclick="window.open('http://localhost:8080/manage/toOther','_self')">
-        <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#818177;" fill="currentColor" class="bi bi-list svg-text" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-            </svg>&nbsp;
-            其他服务
-        </p>
-    </div>
     <div class="tip" onclick="window.open('http://localhost:8080/manage/toPay','_self')">
         <p>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#fcc425;" fill="currentColor" class="bi bi-credit-card-2-back-fill svg-text" viewBox="0 0 16 16">
@@ -183,14 +160,6 @@
                 <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
             </svg>&nbsp;
             上门就诊
-        </p>
-    </div>
-    <div class="tip" onclick="window.open('http://localhost:8080/patient/toDiseaseAnalysis','_self')">
-        <p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="color:#dbaa0f;" fill="currentColor" class="bi bi-pie-chart-fill svg-text" viewBox="0 0 16 16">
-                <path d="M15.985 8.5H8.207l-5.5 5.5a8 8 0 0 0 13.277-5.5zM2 13.292A8 8 0 0 1 7.5.015v7.778l-5.5 5.5zM8.5.015V7.5h7.485A8.001 8.001 0 0 0 8.5.015z"/>
-            </svg>&nbsp;
-            病情分析
         </p>
     </div>
 </nav>
