完成门诊模块完成接诊部分，收费模块的框架已经搭建完成

--- a/zft-adapter/src/main/resources/static/css/zft.css
+++ b/zft-adapter/src/main/resources/static/css/zft.css
@@ -99,10 +99,9 @@ body{
 
 .no-data{
     width: 100%;
-    margin: 0 auto;
     text-align: center;
     color: #3c3f41;
-    top: 100px;
+    margin: 40px auto 0;
 }
 
 .svg-text{
