--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -55,7 +55,7 @@
                 <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
             </svg>
         </div>
-        <div class="header-right"><p th:text="'当前诊所:'+${session.tenantName} + ' 当前用户:' + ${session.employee.getEmployeeName()}
+        <div class="header-right"><p th:text="'当前诊所:'+${session.tenantName} + ' 当前用户:' + ${session.employee_name}
         "></p></div>
     </div>
 </nav>
